# ib-alpha-research-TY

./: CHECKLIST.md  EXAMPLE_RUN_RZKJ.md  OUTPUT_TEMPLATE.md  PROMPT_TEMPLATE.md  README.md  SKILL.md  architecture.md  pyproject.toml  requirements.txt  topics.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agent/: README.md  config.example.json  research_agent.py
docs/: API.md  ARCHITECTURE.md
examples/: facts_ruanze.json  peers_compute_power.json  ruanze-tech-example.md
industry-maps/: china-computing-power-map-2026.md
skill/: IB_ALPHA_SKILL_V2.md
src/ib_alpha_agent/: __init__.py  cli.py  comparables.py  config.py  llm.py  models.py  orchestrator.py  prompts.py  reporting.py  utils.py  valuation.py
src/ib_alpha_agent/sources/: __init__.py  base.py  manual_json.py
src/ib_alpha_agent/templates/: report_template.md
templates/: diligence-checklist.md  output-template.md  prompt-template.md
